examples/type_system/failing/197_effect_row_subtract_unresolved_multi_e420.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E420: unresolved multiple effect variables in subtraction paths.

fn unresolved_many(x: Int) -> Int with |e - IO, |t - Time {
    x
}

fn main() -> Unit {
    let _ = unresolved_many(1)
}
